UI fixes //Linux

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -162,7 +162,7 @@ hr { width:100%;}
   width: 0.8em;
   height: 0.8em;
   border-radius: 50%;
-  background-color: #fc8b2f;
+  background-color: #399878;
   animation: fade 0.8s ease-in-out alternate infinite;
 }
 
